plant-peace-web/clerk-react/src/components/Footer/Footer.module.css
@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');


.footer {
  background-color: #354733; 
  color: white; 
  width: 1732px;
  height: 572px;
  top: 4549px;
  left: -0px;
  gap: 0px;
  opacity: 0px;
  display: flex;
  flex-direction: row;
  flex-flow: wrap;
  font-family: 'EB Garamond', serif; 
}

.footer::before {
  content: ""; 
  position: absolute; 
  top: 0;
  left: 0;
  width: 100%; 
  height: 100%;
  background-image: url('src/assets/images/plantPattern.svg'); 
  background-repeat: no-repeat; 
  background-size: contain; 
  background-position: center; 
  opacity: 0.1; 
  z-index: 0; 
}

.footer-content {
  position: relative; 
  z-index: 1; 
}

.square1 h2 {
  margin-bottom: 35px; 
  
}

.square1 a{
  display: flex;
  flex-direction: row; 
  line-height: 0.5; 
  color: #fcfcfc; 
  text-align: center;
  text-decoration: none; 
}

.square2 h2 {
  margin-bottom: 35px; 
}

.square2 a{
  display: flex;
  flex-direction: row; 
  line-height: 0.5; 
  color: #fcfcfc; 
  text-align: center;
  text-decoration: none; 
}

  
  /* Seção Superior */
.upperSection {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding: 10px;
}

.squareLeft {
  width: 274px;
  height: 250px;
  top: 4684px;
  left: 100px;
  gap: 0px;
  opacity: 0px;
  border-color: #ffffff;
  margin-left: 90px;
  margin-top: 150px;
  font-size: 19px;
}

.squaresRight {
  display: flex;
  align-items: center;
  padding-right: 50px;
  gap: 20px;
  margin-right: 83px;
  border-color: #f5f0f0;
}

.square1 {
  width: 67px;
  height: 168px;
  top: 4725px;
  left: 1350px;
  gap: 0px;
  opacity: 0px;
  border-color: #fff;
  font-size: 15px;
  margin-top: 100px;
  z-index: 2; 
}

.square2 {
  width: 125px;
  height: 168px;
  top: 4725px;
  left: 1469px;
  gap: 0px;
  opacity: 0px;
  border-color: #fff;
  margin-top: 100px;
  font-size: 15px;
  z-index: 2; 
}

/* Linha Divisória */
.boxdivider{
  display: flex;
  flex-direction: row;
  align-items: center;
  border-color: #fff;
  margin-left: 100px;
}

.divider {
  width: 1532px;
  height: 0px;
  top: 4985px;
  left: 100px;
  gap: 0px;
  border: 1px 0px 0px 0px;
  opacity: 0px;
  color: #DDDEA0;
}

/* Seção Inferior */
.lowerSection {
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding: 10px;
}

.squareLeftdown {
  width: 50px;
  height: 54px;
  gap: 0px;
  opacity: 0px;  
  border-color: #fffdfd;
  margin-left: 90px;
}

.squareLeftdown img{
  width: 100%; 
  height: auto; 
}
.squareRight {
  width: 221px;
  height: 50px;
  gap: 0px;
  opacity: 0px;
  border-color: #fff;
  margin-right: 75px;
  text-align: center;
}

